Code improvements, better don't send modpack content fields though packet